# Masthead_Camera

./: .gitignore  CMakeLists.txt  Makefile  README.md  copy_to_bin.sh
include/: attitude.hpp  video.hpp
proto/: Attitude  BNO085_Attitude.cpp  Camera_Stream  Camera_Stream.cpp  Camera_Stream_V2.cpp  Camera_Stream_V3.cpp  Camera_Stream_V4.cpp  Camera_Stream_V5.cpp  Camera_Stream_V6.cpp  README.md
src/: attitude.cpp  main.cpp  video.cpp
